Generate basic dtrace from har